Bug 442582 - When merging files from`git mergetool`, output is scrolled to top instead of first conflict
Summary: When merging files from`git mergetool`, output is scrolled to top instead of ...
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.9.6
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-17 08:26 UTC by nyanpasu64
Modified: 2023-06-13 19:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.10.5
Sentry Crash Report:


Attachments
Picture of "git mergetool" opening kdiff3 1.10.4, with output scrolled to top (222.84 KB, image/png)
2023-06-02 22:26 UTC, nyanpasu64
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nyanpasu64 2021-09-17 08:26:58 UTC
SUMMARY
When I run `git mergetool` and it opens KDiff3, the Output pane is scrolled to the top rather than the first conflict, until I click "previous delta" and "next delta".

STEPS TO REPRODUCE
1. Run `git config --global merge.tool kdiff3`.
2. In a git repository with a merge conflict, run `git mergetool`.

OBSERVED RESULT
The "Output:" pane is scrolled to the top of the document.

EXPECTED RESULT
The "Output:" pane is scrolled to the location of the first conflict, like the A/B/C panes.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Kernel Version: 5.14.3-zen1-1-zen (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 5600X 6-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GT 730/PCIe/SSE2

This occurred on KDiff3 1.9.3 but not 1.8.5, and I believe it didn't occur on 1.9.2.

ADDITIONAL INFORMATION
Comment 1 Pedro Ferreira 2021-09-30 12:58:32 UTC
I'm on 1.9.2 and this happens to me.
Comment 2 dgrogan 2023-04-25 18:15:32 UTC
Same issue here on 1.9.6
Comment 3 michael 2023-05-16 19:09:37 UTC
This appears to be fixed in 1.10.3/1.10.2. Is anyone able to repo.  in the latest release?
Comment 4 nyanpasu64 2023-05-19 14:39:26 UTC
Tried kdiff3 1.10.4 with two (not three) files. Now the up and down arrows do not scroll the document *at all*! Unless I turn off "Word Wrap Diff Windows", then it works.
Comment 5 michael 2023-05-24 17:13:30 UTC
Go ahead file a separate  report for the new scroll. Likely a different root. Also FYI bugs left in NEEDSINFO status don't show in the default search and subject to possible automated closer after an extended period of inactivity. REPORTED is safe state to switch to when responding to such bugs.
Comment 6 nyanpasu64 2023-06-02 22:25:40 UTC
Actually the bug still occurs on 1.10.4 I think?
Comment 7 nyanpasu64 2023-06-02 22:26:23 UTC
Created attachment 159419 [details]
Picture of "git mergetool" opening kdiff3 1.10.4, with output scrolled to top
Comment 8 michael 2023-06-03 19:05:53 UTC
Thanks  I'll have a look at this.
Comment 9 michael 2023-06-13 19:15:47 UTC
Git commit d6d661f74a96c734daa74d3f4a36534ca35ce83a by Michael Reeves.
Committed on 13/06/2023 at 19:08.
Pushed by mreeves into branch '1.10'.

Turn on updates before calling MergeResultWindow::slotGoNextUnsolvedConflict
FIXED-IN:1.10.5

M  +3    -2    src/pdiff.cpp

https://invent.kde.org/sdk/kdiff3/-/commit/d6d661f74a96c734daa74d3f4a36534ca35ce83a
Comment 10 michael 2023-06-13 19:16:21 UTC
Git commit 32d4d0321a95be4318312d5ebb567137fff5f48d by Michael Reeves.
Committed on 13/06/2023 at 19:11.
Pushed by mreeves into branch 'master'.

Turn on updates before calling MergeResultWindow::slotGoNextUnsolvedConflict
FIXED-IN:1.10.5

M  +3    -2    src/pdiff.cpp

https://invent.kde.org/sdk/kdiff3/-/commit/32d4d0321a95be4318312d5ebb567137fff5f48d