Turn on updates before calling MergeResultWindow::slotGoNextUnsolvedConflict

BUG:442582
FIXED-IN:1.10.5